@@ -1,17 +1,17 @@
 package com.unimag.Tienda.Unit.RepositoryTest;
 
 import com.unimag.Tienda.Entidad.ItemPedido;
-import com.unimag.Tienda.Entidad.Pedido;
+
 import com.unimag.Tienda.Repository.ItemPedidoRepository;
 import com.unimag.Tienda.Service.ItemPedidoService;
-import com.unimag.Tienda.Service.PedidoService;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+
 import java.util.List;
 
 @ExtendWith(MockitoExtension.class)
@@ -25,7 +25,7 @@ public class ItemPedidoRepositoryTest {
     public void testBuscarPorIdPedido(){
         ItemPedido itemPedido =new ItemPedido();
         itemPedido.setId(itemPedido.getId());
-        List<ItemPedido> itemPedidoList = Arrays.asList();
+        List<ItemPedido> itemPedidoList = List.of();
 
     }
 }
